[MAID-2652] chore/license: update to dual license (MIT/BSD)

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,7 +3,7 @@ authors = ["MaidSafe Developers <dev@maidsafe.net>"]
 description = "A key-value store limited by size or time, allowing accumulation of multiple values under a single key."
 documentation = "https://docs.rs/accumulator"
 homepage = "https://maidsafe.net"
-license = "GPL-3.0"
+license = "MIT OR BSD-3-Clause"
 name = "accumulator"
 readme = "README.md"
 repository = "https://github.com/maidsafe/accumulator"
